[package]
name = "mockforge"
version = "0.1.1"
edition = "2021"
authors = ["Anilcan Kara <anilcan.kara@outlook.com>"]
description = "MockForge: The Ultimate Multi-Tenant Mock API Gateway"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
notify = "6.1"
